# zsh-ffi

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml  test.yml
config/: config.site
src/: base.rs  builtins.rs  hooks_import.rs  lib.rs  modules.rs  zle.rs
src/extensions/: builtin.rs  conditions.rs  math.rs  mod.rs  types.rs
tests/: base.rs  basic.rs  builtins.rs  modules.rs  zle.rs
