[package]
name = "zsh-ffi"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Low-level bindings to dynamically-loadable zsh internals"
readme="./README.md"

[lib]
name = "zsh_ffi"

[dependencies]

[build-dependencies]
bindgen = '0.72.1'
glob = "0.3.3"
zsh-src = { git = "https://github.com/zsh-rs/zsh-src.git", version = "0.1.0" }
