[package]
name = "zsh-ffi"
version = "0.1.2"
authors = ["Cole McAnelly <cole.mcanelly3@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zsh-rs/zsh-ffi"
edition = "2024"
description = """
Low-level bindings to dynamically-loadable zsh internals
"""

[lib]
name = "zsh"

[dependencies]

[build-dependencies]
bindgen = '0.72.1'
glob = "0.3.3"
zsh-src = { git = "https://github.com/zsh-rs/zsh-src.git", version = "0.1.0" }
